install font-awesome to add angle arrows on collapsable groups and change title row colors

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
+thead {
+	background-color: #FBA819;
+}
+
+.groupTitle {
+	background-color: #94D4C5!important;
+	font-weight: bold;
+	cursor: pointer;
+}
+
+thead, .groupTitle, td {
+	color: #300C39;
+}
+
 .hideRow {
 	display: none;
 }
